fixed ranks not showing up, added note overlap setting

--- a/theme/mapSelect.css
+++ b/theme/mapSelect.css
@@ -195,11 +195,12 @@
 
 #highscoreContainer{
     type: container;
+    parent: mapContainer;
     scrollable: no;
-    left: 0;
+    left: 20;
     top: 0;
-    width: 30;
-    height: 20;
+    width: 80;
+    height: 100;
     active: no;
 }
 
@@ -208,7 +209,7 @@
     parent: highscoreContainer;
     left: 65;
     top: 5;
-    width: 100;
+    width: 40;
     height: 38;
     color: BLACK;
     opacity: 0.8;
@@ -230,10 +231,11 @@
 #highscoreText{
     type: text;
     parent: highscoreContainer;
-    content: $highscore;
+    content: "_map_highscore_";
     left: 74;
     top: 6;
-    width: 100;
+    width: 2;
+    textClipping: no;
     color: WHITE;
     font-size: 1.5;
 }
@@ -244,7 +246,8 @@
     content: "combo";
     left: 74;
     top: 17;
-    width: 100;
+    width: 2;
+    textClipping: no;
     color: WHITE;
     font-size: 1.1;
 }
@@ -252,10 +255,11 @@
 #comboValue{
     type: text;
     parent: highscoreContainer;
-    content: $combo;
-    left: 88;
+    content: "_map_combo_";
+    left: 100;
     top: 17.5;
-    width: 100;
+    width: 2;
+    textClipping: no;
     color: WHITE;
     font-size: 1;
 }
@@ -266,7 +270,8 @@
     content: "Miss";
     left: 74;
     top: 24;
-    width: 100;
+    width: 2;
+    textClipping: no;
     color: WHITE;
     font-size: 1.1;
 }
@@ -274,10 +279,11 @@
 #missesValue{
     type: text;
     parent: highscoreContainer;
-    content: $misses;
-    left: 85;
+    content: "_map_miss_";
+    left: 100;
     top: 24;
-    width: 100;
+    width: 2;
+    textClipping: no;
     color: WHITE;
     font-size: 1.3;
 }
@@ -285,10 +291,11 @@
 #accuracyText{
     type: text;
     parent: highscoreContainer;
-    content: $accuracy;
+    content: "_map_accuracy_";
     left: 74;
     top: 31;
-    width: 100;
+    width: 2;
+    textClipping: no;
     color: WHITE;
     font-size: 1.5;
 }
@@ -297,9 +304,10 @@
     type: text;
     parent: highscoreContainer;
     content: "%";
-    left: 81;
+    left: 100;
     top: 31;
-    width: 100;
+    width: 2;
+    textClipping: no;
     color: WHITE;
     font-size: 1.5;
 }
@@ -307,10 +315,11 @@
 #rank{
     type: image;
     parent: highscoreContainer;
-    left: 23;
-    top: 12;
-    width: 6;
-    height: 6;
+    content: "_map_rank_";
+    left: 70;
+    top: 45;
+    width: 30;
+    height: 30;
 }
 
 #mapButtonsContainer{
